// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PipelineDeploymentTable should match snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <div
        class="el-mb11 el-table"
        data-has-call-to-action="false"
        data-has-expandable-action="true"
        data-num-columns-excl-action-col="5"
        role="table"
      >
        <div
          class="mocked-styled-101 el-table-headers-row"
          role="row"
        >
          <div
            aria-label="Release Type"
            class="mocked-styled-102 el-table-header"
            role="columnheader"
          >
            Release Type
          </div>
          <div
            aria-label="Created"
            class="mocked-styled-102 el-table-header"
            role="columnheader"
          >
            Created
          </div>
          <div
            aria-label="Status"
            class="mocked-styled-102 el-table-header"
            role="columnheader"
          >
            Status
          </div>
          <div
            aria-label="Version"
            class="mocked-styled-102 el-table-header"
            role="columnheader"
          >
            Version
          </div>
          <div
            aria-label="Currently Deployed"
            class="mocked-styled-102 el-table-header"
            role="columnheader"
          >
            Currently Deployed
          </div>
          <div
            class="mocked-styled-102 el-table-header"
            role="columnheader"
          >
            <span
              class="el-intent-default el-icon-new el-icon"
            >
              <svg
                fill="none"
                height="1em"
                role="img"
                title="Icon image with name settings"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18.917 12.88c.08-.584.08-1.176 0-1.76l2.06-1.85a1 1 0 0 0 .25-1.27l-1.18-2a1 1 0 0 0-1.19-.45l-2.65.9a7.2 7.2 0 0 0-1.52-.89l-.55-2.76a1 1 0 0 0-1-.8h-2.34a1 1 0 0 0-1 .8l-.53 2.74a7.5 7.5 0 0 0-1.52.89l-2.65-.9a1 1 0 0 0-1.19.47l-1.18 2a1 1 0 0 0 .25 1.27l2.1 1.85a6.5 6.5 0 0 0 0 1.76l-2.1 1.85a1 1 0 0 0-.25 1.27l1.18 2a1 1 0 0 0 1.19.45l2.65-.9c.47.356.98.654 1.52.89l.55 2.74a1 1 0 0 0 1 .8h2.36a1 1 0 0 0 1-.8l.55-2.74a7.2 7.2 0 0 0 1.52-.89l2.65.9a1 1 0 0 0 1.15-.45l1.18-2a1 1 0 0 0-.25-1.27zM11.977 15a3 3 0 1 1 0-6 3 3 0 0 1 0 6"
                  fill="currentColor"
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          class="mocked-styled-110 el-table-row-container"
          role="row"
        >
          <div
            class="mocked-styled-103 el-table-row"
          >
            <div
              class="el-table-cell-has-dark-text el-table-cell"
              role="cell"
            >
              <div
                class="mocked-styled-111 el-table-cell-content"
                data-narrow-label="Release Type"
              >
                Unknown
              </div>
            </div>
            <div
              class="el-table-cell-has-dark-text el-table-cell"
              role="cell"
            >
              <div
                class="mocked-styled-111 el-table-cell-content"
                data-narrow-label="Created"
              >
                20 Apr 2022 14:30:26
              </div>
            </div>
            <div
              class="el-table-cell-has-dark-text el-table-cell"
              role="cell"
            >
              <div
                class="mocked-styled-111 el-table-cell-content"
                data-narrow-label="Status"
              >
                <span
                  class="el-intent-success el-status-indicator"
                />
                Succeeded
              </div>
            </div>
            <div
              class="el-table-cell-has-dark-text el-table-cell"
              role="cell"
            >
              <div
                class="mocked-styled-111 el-table-cell-content"
                data-narrow-label="Version"
              />
            </div>
            <div
              class="el-table-cell-has-dark-text el-table-cell"
              role="cell"
            >
              <div
                class="mocked-styled-111 el-table-cell-content"
                data-narrow-label="Currently Deployed"
              >
                Deployed
              </div>
            </div>
            <div
              class="mocked-styled-109 el-table-expandable-row-trigger-cell"
              role="cell"
              tabindex="0"
            >
              <span
                class="el-intent-default el-icon-new el-icon"
              >
                <svg
                  fill="none"
                  height="1em"
                  role="img"
                  title="Icon image with name more"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0M12 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4M19 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="mocked-styled-113 el-table-expandable-row"
          >
            <div
              class="mocked-styled-114 el-table-expandable-container"
            >
              <div
                class="mocked-styled-115 el-table"
              >
                <div
                  class="mock-css.
  grid-template-columns: repeat(4, 1fr);
 el-table-headers-row"
                >
                  <div
                    class="mocked-styled-102 el-table-header"
                  >
                    Task
                  </div>
                  <div
                    class="mocked-styled-102 el-table-header"
                  >
                    Status
                  </div>
                  <div
                    class="mocked-styled-102 el-table-header"
                  >
                    Started
                  </div>
                  <div
                    class="mocked-styled-102 el-table-header"
                  >
                    Finished
                  </div>
                </div>
                <div
                  class="mock-css.
  grid-template-columns: repeat(4, 1fr);
 el-table-row"
                >
                  <div
                    class="el-table-cell-has-dark-text el-table-cell"
                  >
                    <div
                      class="mocked-styled-111 el-table-cell-content"
                    >
                      Download Source
                    </div>
                  </div>
                  <div
                    class="el-table-cell-has-dark-text el-table-cell"
                  >
                    <div
                      class="mocked-styled-111 el-table-cell-content"
                    >
                      <span
                        class="el-intent-success el-status-indicator"
                      />
                      Succeeded
                    </div>
                  </div>
                  <div
                    class="el-table-cell-has-dark-text el-table-cell"
                  >
                    <div
                      class="mocked-styled-111 el-table-cell-content"
                    >
                      -
                    </div>
                  </div>
                  <div
                    class="el-table-cell-has-dark-text el-table-cell"
                  >
                    <div
                      class="mocked-styled-111 el-table-cell-content"
                    >
                      -
                    </div>
                  </div>
                </div>
                <div
                  class="mock-css.
  grid-template-columns: repeat(4, 1fr);
 el-table-row"
                >
                  <div
                    class="el-table-cell-has-dark-text el-table-cell"
                  >
                    <div
                      class="mocked-styled-111 el-table-cell-content"
                    >
                      Install
                    </div>
                  </div>
                  <div
                    class="el-table-cell-has-dark-text el-table-cell"
                  >
                    <div
                      class="mocked-styled-111 el-table-cell-content"
                    >
                      <span
                        class="el-intent-success el-status-indicator"
                      />
                      Succeeded
                    </div>
                  </div>
                  <div
                    class="el-table-cell-has-dark-text el-table-cell"
                  >
                    <div
                      class="mocked-styled-111 el-table-cell-content"
                    >
                      -
                    </div>
                  </div>
                  <div
                    class="el-table-cell-has-dark-text el-table-cell"
                  >
                    <div
                      class="mocked-styled-111 el-table-cell-content"
                    >
                      -
                    </div>
                  </div>
                </div>
                <div
                  class="mock-css.
  grid-template-columns: repeat(4, 1fr);
 el-table-row"
                >
                  <div
                    class="el-table-cell-has-dark-text el-table-cell"
                  >
                    <div
                      class="mocked-styled-111 el-table-cell-content"
                    >
                      Build
                    </div>
                  </div>
                  <div
                    class="el-table-cell-has-dark-text el-table-cell"
                  >
                    <div
                      class="mocked-styled-111 el-table-cell-content"
                    >
                      <span
                        class="el-intent-success el-status-indicator"
                      />
                      Succeeded
                    </div>
                  </div>
                  <div
                    class="el-table-cell-has-dark-text el-table-cell"
                  >
                    <div
                      class="mocked-styled-111 el-table-cell-content"
                    >
                      -
                    </div>
                  </div>
                  <div
                    class="el-table-cell-has-dark-text el-table-cell"
                  >
                    <div
                      class="mocked-styled-111 el-table-cell-content"
                    >
                      -
                    </div>
                  </div>
                </div>
                <div
                  class="mock-css.
  grid-template-columns: repeat(4, 1fr);
 el-table-row"
                >
                  <div
                    class="el-table-cell-has-dark-text el-table-cell"
                  >
                    <div
                      class="mocked-styled-111 el-table-cell-content"
                    >
                      Deploy
                    </div>
                  </div>
                  <div
                    class="el-table-cell-has-dark-text el-table-cell"
                  >
                    <div
                      class="mocked-styled-111 el-table-cell-content"
                    >
                      <span
                        class="el-intent-success el-status-indicator"
                      />
                      Succeeded
                    </div>
                  </div>
                  <div
                    class="el-table-cell-has-dark-text el-table-cell"
                  >
                    <div
                      class="mocked-styled-111 el-table-cell-content"
                    >
                      -
                    </div>
                  </div>
                  <div
                    class="el-table-cell-has-dark-text el-table-cell"
                  >
                    <div
                      class="mocked-styled-111 el-table-cell-content"
                    >
                      -
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="el-mt6"
              >
                <button
                  class="el-intent-primary el-button"
                  disabled=""
                >
                  <div
                    class="mocked-styled-0 el-button-loader"
                  />
                  Logs Expired
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="mocked-styled-71 el-pagination-wrap"
      >
        <button
          aria-label="Previous"
          class="mocked-styled-74 el-pagination-button"
          data-testid="back-button"
          role="button"
          type="button"
        >
          <span
            class="el-icon-new el-icon"
          >
            <svg
              fill="none"
              height="1em"
              role="img"
              title="Icon image with name chevronLeft"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.496 20.004a1 1 0 0 1-.71-.29l-6.99-7a1 1 0 0 1 0-1.42l6.99-7a1.002 1.002 0 0 1 1.678.45c.093.347-.006.716-.26.97l-6.291 6.29 6.292 6.29a1 1 0 0 1-.71 1.71"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
        <div
          class="mocked-styled-72 el-pagination-text"
        >
          <input
            aria-label="Current page number, edit to select page of 1 available"
            class="mocked-styled-73 el-pagination-input"
            value="1"
          />
           
          of 
          1
        </div>
        <button
          aria-label="Next"
          class="mocked-styled-74 el-pagination-button"
          data-testid="forward-button"
          role="button"
          type="button"
        >
          <span
            class="el-icon-new el-icon"
          >
            <svg
              fill="none"
              height="1em"
              role="img"
              title="Icon image with name chevronRight"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.505 20.004a1 1 0 0 1-1.005-1 1 1 0 0 1 .295-.71l6.292-6.29-6.292-6.29a1.005 1.005 0 0 1 0-1.42 1 1 0 0 1 1.419 0l6.99 7a1 1 0 0 1 0 1.42l-6.99 7a1 1 0 0 1-.71.29"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <div
      class="el-mb11 el-table"
      data-has-call-to-action="false"
      data-has-expandable-action="true"
      data-num-columns-excl-action-col="5"
      role="table"
    >
      <div
        class="mocked-styled-101 el-table-headers-row"
        role="row"
      >
        <div
          aria-label="Release Type"
          class="mocked-styled-102 el-table-header"
          role="columnheader"
        >
          Release Type
        </div>
        <div
          aria-label="Created"
          class="mocked-styled-102 el-table-header"
          role="columnheader"
        >
          Created
        </div>
        <div
          aria-label="Status"
          class="mocked-styled-102 el-table-header"
          role="columnheader"
        >
          Status
        </div>
        <div
          aria-label="Version"
          class="mocked-styled-102 el-table-header"
          role="columnheader"
        >
          Version
        </div>
        <div
          aria-label="Currently Deployed"
          class="mocked-styled-102 el-table-header"
          role="columnheader"
        >
          Currently Deployed
        </div>
        <div
          class="mocked-styled-102 el-table-header"
          role="columnheader"
        >
          <span
            class="el-intent-default el-icon-new el-icon"
          >
            <svg
              fill="none"
              height="1em"
              role="img"
              title="Icon image with name settings"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18.917 12.88c.08-.584.08-1.176 0-1.76l2.06-1.85a1 1 0 0 0 .25-1.27l-1.18-2a1 1 0 0 0-1.19-.45l-2.65.9a7.2 7.2 0 0 0-1.52-.89l-.55-2.76a1 1 0 0 0-1-.8h-2.34a1 1 0 0 0-1 .8l-.53 2.74a7.5 7.5 0 0 0-1.52.89l-2.65-.9a1 1 0 0 0-1.19.47l-1.18 2a1 1 0 0 0 .25 1.27l2.1 1.85a6.5 6.5 0 0 0 0 1.76l-2.1 1.85a1 1 0 0 0-.25 1.27l1.18 2a1 1 0 0 0 1.19.45l2.65-.9c.47.356.98.654 1.52.89l.55 2.74a1 1 0 0 0 1 .8h2.36a1 1 0 0 0 1-.8l.55-2.74a7.2 7.2 0 0 0 1.52-.89l2.65.9a1 1 0 0 0 1.15-.45l1.18-2a1 1 0 0 0-.25-1.27zM11.977 15a3 3 0 1 1 0-6 3 3 0 0 1 0 6"
                fill="currentColor"
              />
            </svg>
          </span>
        </div>
      </div>
      <div
        class="mocked-styled-110 el-table-row-container"
        role="row"
      >
        <div
          class="mocked-styled-103 el-table-row"
        >
          <div
            class="el-table-cell-has-dark-text el-table-cell"
            role="cell"
          >
            <div
              class="mocked-styled-111 el-table-cell-content"
              data-narrow-label="Release Type"
            >
              Unknown
            </div>
          </div>
          <div
            class="el-table-cell-has-dark-text el-table-cell"
            role="cell"
          >
            <div
              class="mocked-styled-111 el-table-cell-content"
              data-narrow-label="Created"
            >
              20 Apr 2022 14:30:26
            </div>
          </div>
          <div
            class="el-table-cell-has-dark-text el-table-cell"
            role="cell"
          >
            <div
              class="mocked-styled-111 el-table-cell-content"
              data-narrow-label="Status"
            >
              <span
                class="el-intent-success el-status-indicator"
              />
              Succeeded
            </div>
          </div>
          <div
            class="el-table-cell-has-dark-text el-table-cell"
            role="cell"
          >
            <div
              class="mocked-styled-111 el-table-cell-content"
              data-narrow-label="Version"
            />
          </div>
          <div
            class="el-table-cell-has-dark-text el-table-cell"
            role="cell"
          >
            <div
              class="mocked-styled-111 el-table-cell-content"
              data-narrow-label="Currently Deployed"
            >
              Deployed
            </div>
          </div>
          <div
            class="mocked-styled-109 el-table-expandable-row-trigger-cell"
            role="cell"
            tabindex="0"
          >
            <span
              class="el-intent-default el-icon-new el-icon"
            >
              <svg
                fill="none"
                height="1em"
                role="img"
                title="Icon image with name more"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0M12 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4M19 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4"
                  fill="currentColor"
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          class="mocked-styled-113 el-table-expandable-row"
        >
          <div
            class="mocked-styled-114 el-table-expandable-container"
          >
            <div
              class="mocked-styled-115 el-table"
            >
              <div
                class="mock-css.
  grid-template-columns: repeat(4, 1fr);
 el-table-headers-row"
              >
                <div
                  class="mocked-styled-102 el-table-header"
                >
                  Task
                </div>
                <div
                  class="mocked-styled-102 el-table-header"
                >
                  Status
                </div>
                <div
                  class="mocked-styled-102 el-table-header"
                >
                  Started
                </div>
                <div
                  class="mocked-styled-102 el-table-header"
                >
                  Finished
                </div>
              </div>
              <div
                class="mock-css.
  grid-template-columns: repeat(4, 1fr);
 el-table-row"
              >
                <div
                  class="el-table-cell-has-dark-text el-table-cell"
                >
                  <div
                    class="mocked-styled-111 el-table-cell-content"
                  >
                    Download Source
                  </div>
                </div>
                <div
                  class="el-table-cell-has-dark-text el-table-cell"
                >
                  <div
                    class="mocked-styled-111 el-table-cell-content"
                  >
                    <span
                      class="el-intent-success el-status-indicator"
                    />
                    Succeeded
                  </div>
                </div>
                <div
                  class="el-table-cell-has-dark-text el-table-cell"
                >
                  <div
                    class="mocked-styled-111 el-table-cell-content"
                  >
                    -
                  </div>
                </div>
                <div
                  class="el-table-cell-has-dark-text el-table-cell"
                >
                  <div
                    class="mocked-styled-111 el-table-cell-content"
                  >
                    -
                  </div>
                </div>
              </div>
              <div
                class="mock-css.
  grid-template-columns: repeat(4, 1fr);
 el-table-row"
              >
                <div
                  class="el-table-cell-has-dark-text el-table-cell"
                >
                  <div
                    class="mocked-styled-111 el-table-cell-content"
                  >
                    Install
                  </div>
                </div>
                <div
                  class="el-table-cell-has-dark-text el-table-cell"
                >
                  <div
                    class="mocked-styled-111 el-table-cell-content"
                  >
                    <span
                      class="el-intent-success el-status-indicator"
                    />
                    Succeeded
                  </div>
                </div>
                <div
                  class="el-table-cell-has-dark-text el-table-cell"
                >
                  <div
                    class="mocked-styled-111 el-table-cell-content"
                  >
                    -
                  </div>
                </div>
                <div
                  class="el-table-cell-has-dark-text el-table-cell"
                >
                  <div
                    class="mocked-styled-111 el-table-cell-content"
                  >
                    -
                  </div>
                </div>
              </div>
              <div
                class="mock-css.
  grid-template-columns: repeat(4, 1fr);
 el-table-row"
              >
                <div
                  class="el-table-cell-has-dark-text el-table-cell"
                >
                  <div
                    class="mocked-styled-111 el-table-cell-content"
                  >
                    Build
                  </div>
                </div>
                <div
                  class="el-table-cell-has-dark-text el-table-cell"
                >
                  <div
                    class="mocked-styled-111 el-table-cell-content"
                  >
                    <span
                      class="el-intent-success el-status-indicator"
                    />
                    Succeeded
                  </div>
                </div>
                <div
                  class="el-table-cell-has-dark-text el-table-cell"
                >
                  <div
                    class="mocked-styled-111 el-table-cell-content"
                  >
                    -
                  </div>
                </div>
                <div
                  class="el-table-cell-has-dark-text el-table-cell"
                >
                  <div
                    class="mocked-styled-111 el-table-cell-content"
                  >
                    -
                  </div>
                </div>
              </div>
              <div
                class="mock-css.
  grid-template-columns: repeat(4, 1fr);
 el-table-row"
              >
                <div
                  class="el-table-cell-has-dark-text el-table-cell"
                >
                  <div
                    class="mocked-styled-111 el-table-cell-content"
                  >
                    Deploy
                  </div>
                </div>
                <div
                  class="el-table-cell-has-dark-text el-table-cell"
                >
                  <div
                    class="mocked-styled-111 el-table-cell-content"
                  >
                    <span
                      class="el-intent-success el-status-indicator"
                    />
                    Succeeded
                  </div>
                </div>
                <div
                  class="el-table-cell-has-dark-text el-table-cell"
                >
                  <div
                    class="mocked-styled-111 el-table-cell-content"
                  >
                    -
                  </div>
                </div>
                <div
                  class="el-table-cell-has-dark-text el-table-cell"
                >
                  <div
                    class="mocked-styled-111 el-table-cell-content"
                  >
                    -
                  </div>
                </div>
              </div>
            </div>
            <div
              class="el-mt6"
            >
              <button
                class="el-intent-primary el-button"
                disabled=""
              >
                <div
                  class="mocked-styled-0 el-button-loader"
                />
                Logs Expired
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="mocked-styled-71 el-pagination-wrap"
    >
      <button
        aria-label="Previous"
        class="mocked-styled-74 el-pagination-button"
        data-testid="back-button"
        role="button"
        type="button"
      >
        <span
          class="el-icon-new el-icon"
        >
          <svg
            fill="none"
            height="1em"
            role="img"
            title="Icon image with name chevronLeft"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15.496 20.004a1 1 0 0 1-.71-.29l-6.99-7a1 1 0 0 1 0-1.42l6.99-7a1.002 1.002 0 0 1 1.678.45c.093.347-.006.716-.26.97l-6.291 6.29 6.292 6.29a1 1 0 0 1-.71 1.71"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
      <div
        class="mocked-styled-72 el-pagination-text"
      >
        <input
          aria-label="Current page number, edit to select page of 1 available"
          class="mocked-styled-73 el-pagination-input"
          value="1"
        />
         
        of 
        1
      </div>
      <button
        aria-label="Next"
        class="mocked-styled-74 el-pagination-button"
        data-testid="forward-button"
        role="button"
        type="button"
      >
        <span
          class="el-icon-new el-icon"
        >
          <svg
            fill="none"
            height="1em"
            role="img"
            title="Icon image with name chevronRight"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8.505 20.004a1 1 0 0 1-1.005-1 1 1 0 0 1 .295-.71l6.292-6.29-6.292-6.29a1.005 1.005 0 0 1 0-1.42 1 1 0 0 1 1.419 0l6.99 7a1 1 0 0 1 0 1.42l-6.99 7a1 1 0 0 1-.71.29"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`PipelineDeploymentTable should match snapshot when loading 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <div
        class="mocked-styled-44 el-loader-container"
      >
        <div
          class="mocked-styled-46 el-loader"
        >
          <div
            class="mocked-styled-47 el-loader-moving-bar"
          />
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <div
      class="mocked-styled-44 el-loader-container"
    >
      <div
        class="mocked-styled-46 el-loader"
      >
        <div
          class="mocked-styled-47 el-loader-moving-bar"
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
